Modificacion para la compatibilidad de Base64 estándar